--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -84,7 +84,7 @@
       "update": "Update Cart",
       "checkout": "Check Out",
       "empty": "Your cart is currently empty.",
-      "continue_browsing_html": "Continue browsing <a href=\"\/collections\/all\">here<\/a>.",
+      "continue_browsing_html": "<a href=\"\/collections\/shop\/pillows\">Return to Shop<\/a>",
       "close_cart": "Close Cart",
       "savings_html": "You're saving {{ savings }}",
       "reduce_quantity": "Reduce item quantity by one",
